// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input should be work with icon 1`] = `
"<div><div class=\\"with-label\\"><div class=\\"input-container \\"><div class=\\"input-wrapper line    \\"><span class=\\"input-icon\\"><span>test-icon</span><style>
        .input-icon {
          box-sizing: content-box;
          display: flex;
          width: calc(2.5 * 16px * .35);
          height: 100%;
          align-items: center;
          vertical-align: middle;
          margin: 0;
          padding: 0 0.5714rem 0 calc(2.5 * 16px * .3);
          line-height: 1;
          position: relative;
          cursor: default;
          pointer-events: none;
        }
      </style></span><input type=\\"text\\" class=\\"left-icon\\" placeholder=\\"\\" autocomplete=\\"off\\" value=\\"\\"></div></div><style>
          .with-label {
            display: inline-block;
            width: initial;
            box-sizing: border-box;
            -webkit-box-align: center;
          }

          .input-container {
            display: inline-flex;
            align-items: center;
            width: initial;
            height: calc(2.5 * 16px);
          }

          .input-wrapper {
            display: inline-flex;
            vertical-align: middle;
            align-items: center;
            height: 100%;
            flex: 1;
            user-select: none;
            border-radius: 4px;
            transition: border 0.2s ease 0s, color 0.2s ease 0s;
            background-color: #fff;
            border: 1px solid #ebeced;
          }

          .input-wrapper.left-label {
            border-top-left-radius: 0;
            border-bottom-left-radius: 0;
          }

          .input-wrapper.right-label {
            border-top-right-radius: 0;
            border-bottom-right-radius: 0;
          }

          .input-wrapper.disabled {
            cursor: not-allowed;
          }

          .line.input-wrapper.disabled {
            border-color: #ebeced;
          }

          .solid.input-wrapper.disabled {
            background-color: #dbdde0;
          }

          .focus.input-wrapper:not(.disabled),
          .hover.input-wrapper:not(.disabled) {
            border-color: #0054fe;
            background-color: #fff;
          }

          input {
            margin: 0 1.1429rem;
            padding: 0;
            box-shadow: none;
            font-size: 1rem;
            line-height: calc(2.5 * 16px - 2px);
            background-color: transparent;
            font-weight: normal;
            border: none;
            color: #282d30;
            outline: none;
            border-radius: 0;
            width: 100%;
            min-width: 0;
            -webkit-appearance: none;
          }

          input:disabled {
            cursor: not-allowed;
            color: #aaafbb;
          }

          input.left-icon {
            margin-left: 0;
          }

          input.right-icon {
            margin-right: 0;
          }

          .input-wrapper.focus:not(.disabled) input,
          .input-wrapper.hover:not(.disabled) input {
            color: #0054fe;
          }

          ::placeholder,
          ::-moz-placeholder,
          :-ms-input-placeholder,
          ::-webkit-input-placeholder {
            color: #9b9eac;
          }

          input::-moz-placeholder {
            line-height: calc(2.5 * 16px - 1px);
          }

          input:-webkit-autofill,
          input:-webkit-autofill:active {
            -webkit-box-shadow: 0 0 0 30px #fff inset !important;
            -webkit-text-fill-color: #282d30 !important;
          }

          input:-webkit-autofill:hover,
          input:-webkit-autofill:focus {
            -webkit-box-shadow: 0 0 0 30px #fff inset !important;
            -webkit-text-fill-color: #0054fe !important;
          }

          input:-webkit-autofill,
          input:-webkit-autofill:hover,
          input:-webkit-autofill:focus,
          input:-webkit-autofill:active {
            -webkit-background-clip: text;
          }

          .in-auto-complete .input-wrapper {
            transition: border 0s;
            transition: border-radius 0s;
          }

          .in-auto-complete.transition-leave .input-wrapper.focus:not(.disabled),
          .in-auto-complete.transition-enter .input-wrapper.focus:not(.disabled) {
            border-bottom-left-radius: 0;
            border-bottom-right-radius: 0;
            border-bottom-color: transparent;
          }
        </style></div><div class=\\"with-label\\"><div class=\\"input-container \\"><div class=\\"input-wrapper line    \\"><input type=\\"text\\" class=\\"right-icon\\" placeholder=\\"\\" autocomplete=\\"off\\" value=\\"\\"><span class=\\"input-icon\\"><span>test-icon</span><style>
        .input-icon {
          box-sizing: content-box;
          display: flex;
          width: calc(2.5 * 16px * .35);
          height: 100%;
          align-items: center;
          vertical-align: middle;
          margin: 0;
          padding: 0 calc(2.5 * 16px * .3) 0 calc(2.5 * 16px * .3);
          line-height: 1;
          position: relative;
          cursor: default;
          pointer-events: none;
        }
      </style></span></div></div><style>
          .with-label {
            display: inline-block;
            width: initial;
            box-sizing: border-box;
            -webkit-box-align: center;
          }

          .input-container {
            display: inline-flex;
            align-items: center;
            width: initial;
            height: calc(2.5 * 16px);
          }

          .input-wrapper {
            display: inline-flex;
            vertical-align: middle;
            align-items: center;
            height: 100%;
            flex: 1;
            user-select: none;
            border-radius: 4px;
            transition: border 0.2s ease 0s, color 0.2s ease 0s;
            background-color: #fff;
            border: 1px solid #ebeced;
          }

          .input-wrapper.left-label {
            border-top-left-radius: 0;
            border-bottom-left-radius: 0;
          }

          .input-wrapper.right-label {
            border-top-right-radius: 0;
            border-bottom-right-radius: 0;
          }

          .input-wrapper.disabled {
            cursor: not-allowed;
          }

          .line.input-wrapper.disabled {
            border-color: #ebeced;
          }

          .solid.input-wrapper.disabled {
            background-color: #dbdde0;
          }

          .focus.input-wrapper:not(.disabled),
          .hover.input-wrapper:not(.disabled) {
            border-color: #0054fe;
            background-color: #fff;
          }

          input {
            margin: 0 1.1429rem;
            padding: 0;
            box-shadow: none;
            font-size: 1rem;
            line-height: calc(2.5 * 16px - 2px);
            background-color: transparent;
            font-weight: normal;
            border: none;
            color: #282d30;
            outline: none;
            border-radius: 0;
            width: 100%;
            min-width: 0;
            -webkit-appearance: none;
          }

          input:disabled {
            cursor: not-allowed;
            color: #aaafbb;
          }

          input.left-icon {
            margin-left: 0;
          }

          input.right-icon {
            margin-right: 0;
          }

          .input-wrapper.focus:not(.disabled) input,
          .input-wrapper.hover:not(.disabled) input {
            color: #0054fe;
          }

          ::placeholder,
          ::-moz-placeholder,
          :-ms-input-placeholder,
          ::-webkit-input-placeholder {
            color: #9b9eac;
          }

          input::-moz-placeholder {
            line-height: calc(2.5 * 16px - 1px);
          }

          input:-webkit-autofill,
          input:-webkit-autofill:active {
            -webkit-box-shadow: 0 0 0 30px #fff inset !important;
            -webkit-text-fill-color: #282d30 !important;
          }

          input:-webkit-autofill:hover,
          input:-webkit-autofill:focus {
            -webkit-box-shadow: 0 0 0 30px #fff inset !important;
            -webkit-text-fill-color: #0054fe !important;
          }

          input:-webkit-autofill,
          input:-webkit-autofill:hover,
          input:-webkit-autofill:focus,
          input:-webkit-autofill:active {
            -webkit-background-clip: text;
          }

          .in-auto-complete .input-wrapper {
            transition: border 0s;
            transition: border-radius 0s;
          }

          .in-auto-complete.transition-leave .input-wrapper.focus:not(.disabled),
          .in-auto-complete.transition-enter .input-wrapper.focus:not(.disabled) {
            border-bottom-left-radius: 0;
            border-bottom-right-radius: 0;
            border-bottom-color: transparent;
          }
        </style></div></div>"
`;

exports[`Input should be work with label 1`] = `
"<div><div class=\\"with-label\\"><div class=\\"input-container \\"><span class=\\"\\">label<style>
        span {
          display: inline-flex;
          width: initial;
          height: 100%;
          align-items: center;
          pointer-events: none;
          margin: 0;
          padding: 0 8px;
          color: #9b9eac;
          background-color: #f9fafb;
          border-top-left-radius: 4px;
          border-bottom-left-radius: 4px;
          border-top: 1px solid #eaeaea;
          border-left: 1px solid #eaeaea;
          border-right: none;
          border-bottom: 1px solid #eaeaea;
          font-size: 1rem;
        }

        span.right {
          border-top-left-radius: 0;
          border-bottom-left-radius: 0;
          border-top-right-radius: 4px;
          border-bottom-right-radius: 4px;
          border-left: none;
          border-right: 1px solid #eaeaea;
        }
      </style></span><div class=\\"input-wrapper line    left-label\\"><input type=\\"text\\" class=\\"\\" placeholder=\\"\\" autocomplete=\\"off\\" value=\\"\\"></div></div><style>
          .with-label {
            display: inline-block;
            width: initial;
            box-sizing: border-box;
            -webkit-box-align: center;
          }

          .input-container {
            display: inline-flex;
            align-items: center;
            width: initial;
            height: calc(2.5 * 16px);
          }

          .input-wrapper {
            display: inline-flex;
            vertical-align: middle;
            align-items: center;
            height: 100%;
            flex: 1;
            user-select: none;
            border-radius: 4px;
            transition: border 0.2s ease 0s, color 0.2s ease 0s;
            background-color: #fff;
            border: 1px solid #ebeced;
          }

          .input-wrapper.left-label {
            border-top-left-radius: 0;
            border-bottom-left-radius: 0;
          }

          .input-wrapper.right-label {
            border-top-right-radius: 0;
            border-bottom-right-radius: 0;
          }

          .input-wrapper.disabled {
            cursor: not-allowed;
          }

          .line.input-wrapper.disabled {
            border-color: #ebeced;
          }

          .solid.input-wrapper.disabled {
            background-color: #dbdde0;
          }

          .focus.input-wrapper:not(.disabled),
          .hover.input-wrapper:not(.disabled) {
            border-color: #0054fe;
            background-color: #fff;
          }

          input {
            margin: 0 1.1429rem;
            padding: 0;
            box-shadow: none;
            font-size: 1rem;
            line-height: calc(2.5 * 16px - 2px);
            background-color: transparent;
            font-weight: normal;
            border: none;
            color: #282d30;
            outline: none;
            border-radius: 0;
            width: 100%;
            min-width: 0;
            -webkit-appearance: none;
          }

          input:disabled {
            cursor: not-allowed;
            color: #aaafbb;
          }

          input.left-icon {
            margin-left: 0;
          }

          input.right-icon {
            margin-right: 0;
          }

          .input-wrapper.focus:not(.disabled) input,
          .input-wrapper.hover:not(.disabled) input {
            color: #0054fe;
          }

          ::placeholder,
          ::-moz-placeholder,
          :-ms-input-placeholder,
          ::-webkit-input-placeholder {
            color: #9b9eac;
          }

          input::-moz-placeholder {
            line-height: calc(2.5 * 16px - 1px);
          }

          input:-webkit-autofill,
          input:-webkit-autofill:active {
            -webkit-box-shadow: 0 0 0 30px #fff inset !important;
            -webkit-text-fill-color: #282d30 !important;
          }

          input:-webkit-autofill:hover,
          input:-webkit-autofill:focus {
            -webkit-box-shadow: 0 0 0 30px #fff inset !important;
            -webkit-text-fill-color: #0054fe !important;
          }

          input:-webkit-autofill,
          input:-webkit-autofill:hover,
          input:-webkit-autofill:focus,
          input:-webkit-autofill:active {
            -webkit-background-clip: text;
          }

          .in-auto-complete .input-wrapper {
            transition: border 0s;
            transition: border-radius 0s;
          }

          .in-auto-complete.transition-leave .input-wrapper.focus:not(.disabled),
          .in-auto-complete.transition-enter .input-wrapper.focus:not(.disabled) {
            border-bottom-left-radius: 0;
            border-bottom-right-radius: 0;
            border-bottom-color: transparent;
          }
        </style></div><div class=\\"with-label\\"><div class=\\"input-container \\"><span class=\\"\\">label<style>
        span {
          display: inline-flex;
          width: initial;
          height: 100%;
          align-items: center;
          pointer-events: none;
          margin: 0;
          padding: 0 8px;
          color: #9b9eac;
          background-color: #f9fafb;
          border-top-left-radius: 4px;
          border-bottom-left-radius: 4px;
          border-top: none;
          border-left: none;
          border-right: 1px solid #fff;
          border-bottom: none;
          font-size: 1rem;
        }

        span.right {
          border-top-left-radius: 0;
          border-bottom-left-radius: 0;
          border-top-right-radius: 4px;
          border-bottom-right-radius: 4px;
          border-left: 1px solid #fff;
          border-right: none;
        }
      </style></span><div class=\\"input-wrapper solid    left-label\\"><input type=\\"text\\" class=\\"\\" placeholder=\\"\\" autocomplete=\\"off\\" value=\\"\\"></div></div><style>
          .with-label {
            display: inline-block;
            width: initial;
            box-sizing: border-box;
            -webkit-box-align: center;
          }

          .input-container {
            display: inline-flex;
            align-items: center;
            width: initial;
            height: calc(2.5 * 16px);
          }

          .input-wrapper {
            display: inline-flex;
            vertical-align: middle;
            align-items: center;
            height: 100%;
            flex: 1;
            user-select: none;
            border-radius: 4px;
            transition: border 0.2s ease 0s, color 0.2s ease 0s;
            background-color: #f9fafb;
            border: transparent;
          }

          .input-wrapper.left-label {
            border-top-left-radius: 0;
            border-bottom-left-radius: 0;
          }

          .input-wrapper.right-label {
            border-top-right-radius: 0;
            border-bottom-right-radius: 0;
          }

          .input-wrapper.disabled {
            cursor: not-allowed;
          }

          .line.input-wrapper.disabled {
            border-color: #ebeced;
          }

          .solid.input-wrapper.disabled {
            background-color: #dbdde0;
          }

          .focus.input-wrapper:not(.disabled),
          .hover.input-wrapper:not(.disabled) {
            border-color: transparent;
            background-color: #f0f5ff;
          }

          input {
            margin: 0 1.1429rem;
            padding: 0;
            box-shadow: none;
            font-size: 1rem;
            line-height: calc(2.5 * 16px - 2px);
            background-color: transparent;
            font-weight: normal;
            border: none;
            color: #282d30;
            outline: none;
            border-radius: 0;
            width: 100%;
            min-width: 0;
            -webkit-appearance: none;
          }

          input:disabled {
            cursor: not-allowed;
            color: #aaafbb;
          }

          input.left-icon {
            margin-left: 0;
          }

          input.right-icon {
            margin-right: 0;
          }

          .input-wrapper.focus:not(.disabled) input,
          .input-wrapper.hover:not(.disabled) input {
            color: inherit;
          }

          ::placeholder,
          ::-moz-placeholder,
          :-ms-input-placeholder,
          ::-webkit-input-placeholder {
            color: #9b9eac;
          }

          input::-moz-placeholder {
            line-height: calc(2.5 * 16px - 1px);
          }

          input:-webkit-autofill,
          input:-webkit-autofill:active {
            -webkit-box-shadow: 0 0 0 30px #f9fafb inset !important;
            -webkit-text-fill-color: #282d30 !important;
          }

          input:-webkit-autofill:hover,
          input:-webkit-autofill:focus {
            -webkit-box-shadow: 0 0 0 30px #f0f5ff inset !important;
            -webkit-text-fill-color: inherit !important;
          }

          input:-webkit-autofill,
          input:-webkit-autofill:hover,
          input:-webkit-autofill:focus,
          input:-webkit-autofill:active {
            -webkit-background-clip: text;
          }

          .in-auto-complete .input-wrapper {
            transition: border 0s;
            transition: border-radius 0s;
          }

          .in-auto-complete.transition-leave .input-wrapper.focus:not(.disabled),
          .in-auto-complete.transition-enter .input-wrapper.focus:not(.disabled) {
            border-bottom-left-radius: 0;
            border-bottom-right-radius: 0;
            border-bottom-color: transparent;
          }
        </style></div><div class=\\"with-label\\"><div class=\\"input-container \\"><div class=\\"input-wrapper line    right-label\\"><input type=\\"text\\" class=\\"\\" placeholder=\\"\\" autocomplete=\\"off\\" value=\\"\\"></div><span class=\\"right\\">label<style>
        span {
          display: inline-flex;
          width: initial;
          height: 100%;
          align-items: center;
          pointer-events: none;
          margin: 0;
          padding: 0 8px;
          color: #9b9eac;
          background-color: #f9fafb;
          border-top-left-radius: 4px;
          border-bottom-left-radius: 4px;
          border-top: 1px solid #eaeaea;
          border-left: 1px solid #eaeaea;
          border-right: none;
          border-bottom: 1px solid #eaeaea;
          font-size: 1rem;
        }

        span.right {
          border-top-left-radius: 0;
          border-bottom-left-radius: 0;
          border-top-right-radius: 4px;
          border-bottom-right-radius: 4px;
          border-left: none;
          border-right: 1px solid #eaeaea;
        }
      </style></span></div><style>
          .with-label {
            display: inline-block;
            width: initial;
            box-sizing: border-box;
            -webkit-box-align: center;
          }

          .input-container {
            display: inline-flex;
            align-items: center;
            width: initial;
            height: calc(2.5 * 16px);
          }

          .input-wrapper {
            display: inline-flex;
            vertical-align: middle;
            align-items: center;
            height: 100%;
            flex: 1;
            user-select: none;
            border-radius: 4px;
            transition: border 0.2s ease 0s, color 0.2s ease 0s;
            background-color: #fff;
            border: 1px solid #ebeced;
          }

          .input-wrapper.left-label {
            border-top-left-radius: 0;
            border-bottom-left-radius: 0;
          }

          .input-wrapper.right-label {
            border-top-right-radius: 0;
            border-bottom-right-radius: 0;
          }

          .input-wrapper.disabled {
            cursor: not-allowed;
          }

          .line.input-wrapper.disabled {
            border-color: #ebeced;
          }

          .solid.input-wrapper.disabled {
            background-color: #dbdde0;
          }

          .focus.input-wrapper:not(.disabled),
          .hover.input-wrapper:not(.disabled) {
            border-color: #0054fe;
            background-color: #fff;
          }

          input {
            margin: 0 1.1429rem;
            padding: 0;
            box-shadow: none;
            font-size: 1rem;
            line-height: calc(2.5 * 16px - 2px);
            background-color: transparent;
            font-weight: normal;
            border: none;
            color: #282d30;
            outline: none;
            border-radius: 0;
            width: 100%;
            min-width: 0;
            -webkit-appearance: none;
          }

          input:disabled {
            cursor: not-allowed;
            color: #aaafbb;
          }

          input.left-icon {
            margin-left: 0;
          }

          input.right-icon {
            margin-right: 0;
          }

          .input-wrapper.focus:not(.disabled) input,
          .input-wrapper.hover:not(.disabled) input {
            color: #0054fe;
          }

          ::placeholder,
          ::-moz-placeholder,
          :-ms-input-placeholder,
          ::-webkit-input-placeholder {
            color: #9b9eac;
          }

          input::-moz-placeholder {
            line-height: calc(2.5 * 16px - 1px);
          }

          input:-webkit-autofill,
          input:-webkit-autofill:active {
            -webkit-box-shadow: 0 0 0 30px #fff inset !important;
            -webkit-text-fill-color: #282d30 !important;
          }

          input:-webkit-autofill:hover,
          input:-webkit-autofill:focus {
            -webkit-box-shadow: 0 0 0 30px #fff inset !important;
            -webkit-text-fill-color: #0054fe !important;
          }

          input:-webkit-autofill,
          input:-webkit-autofill:hover,
          input:-webkit-autofill:focus,
          input:-webkit-autofill:active {
            -webkit-background-clip: text;
          }

          .in-auto-complete .input-wrapper {
            transition: border 0s;
            transition: border-radius 0s;
          }

          .in-auto-complete.transition-leave .input-wrapper.focus:not(.disabled),
          .in-auto-complete.transition-enter .input-wrapper.focus:not(.disabled) {
            border-bottom-left-radius: 0;
            border-bottom-right-radius: 0;
            border-bottom-color: transparent;
          }
        </style></div><div class=\\"with-label\\"><div class=\\"input-container \\"><div class=\\"input-wrapper solid    right-label\\"><input type=\\"text\\" class=\\"\\" placeholder=\\"\\" autocomplete=\\"off\\" value=\\"\\"></div><span class=\\"right\\">label<style>
        span {
          display: inline-flex;
          width: initial;
          height: 100%;
          align-items: center;
          pointer-events: none;
          margin: 0;
          padding: 0 8px;
          color: #9b9eac;
          background-color: #f9fafb;
          border-top-left-radius: 4px;
          border-bottom-left-radius: 4px;
          border-top: none;
          border-left: none;
          border-right: 1px solid #fff;
          border-bottom: none;
          font-size: 1rem;
        }

        span.right {
          border-top-left-radius: 0;
          border-bottom-left-radius: 0;
          border-top-right-radius: 4px;
          border-bottom-right-radius: 4px;
          border-left: 1px solid #fff;
          border-right: none;
        }
      </style></span></div><style>
          .with-label {
            display: inline-block;
            width: initial;
            box-sizing: border-box;
            -webkit-box-align: center;
          }

          .input-container {
            display: inline-flex;
            align-items: center;
            width: initial;
            height: calc(2.5 * 16px);
          }

          .input-wrapper {
            display: inline-flex;
            vertical-align: middle;
            align-items: center;
            height: 100%;
            flex: 1;
            user-select: none;
            border-radius: 4px;
            transition: border 0.2s ease 0s, color 0.2s ease 0s;
            background-color: #f9fafb;
            border: transparent;
          }

          .input-wrapper.left-label {
            border-top-left-radius: 0;
            border-bottom-left-radius: 0;
          }

          .input-wrapper.right-label {
            border-top-right-radius: 0;
            border-bottom-right-radius: 0;
          }

          .input-wrapper.disabled {
            cursor: not-allowed;
          }

          .line.input-wrapper.disabled {
            border-color: #ebeced;
          }

          .solid.input-wrapper.disabled {
            background-color: #dbdde0;
          }

          .focus.input-wrapper:not(.disabled),
          .hover.input-wrapper:not(.disabled) {
            border-color: transparent;
            background-color: #f0f5ff;
          }

          input {
            margin: 0 1.1429rem;
            padding: 0;
            box-shadow: none;
            font-size: 1rem;
            line-height: calc(2.5 * 16px - 2px);
            background-color: transparent;
            font-weight: normal;
            border: none;
            color: #282d30;
            outline: none;
            border-radius: 0;
            width: 100%;
            min-width: 0;
            -webkit-appearance: none;
          }

          input:disabled {
            cursor: not-allowed;
            color: #aaafbb;
          }

          input.left-icon {
            margin-left: 0;
          }

          input.right-icon {
            margin-right: 0;
          }

          .input-wrapper.focus:not(.disabled) input,
          .input-wrapper.hover:not(.disabled) input {
            color: inherit;
          }

          ::placeholder,
          ::-moz-placeholder,
          :-ms-input-placeholder,
          ::-webkit-input-placeholder {
            color: #9b9eac;
          }

          input::-moz-placeholder {
            line-height: calc(2.5 * 16px - 1px);
          }

          input:-webkit-autofill,
          input:-webkit-autofill:active {
            -webkit-box-shadow: 0 0 0 30px #f9fafb inset !important;
            -webkit-text-fill-color: #282d30 !important;
          }

          input:-webkit-autofill:hover,
          input:-webkit-autofill:focus {
            -webkit-box-shadow: 0 0 0 30px #f0f5ff inset !important;
            -webkit-text-fill-color: inherit !important;
          }

          input:-webkit-autofill,
          input:-webkit-autofill:hover,
          input:-webkit-autofill:focus,
          input:-webkit-autofill:active {
            -webkit-background-clip: text;
          }

          .in-auto-complete .input-wrapper {
            transition: border 0s;
            transition: border-radius 0s;
          }

          .in-auto-complete.transition-leave .input-wrapper.focus:not(.disabled),
          .in-auto-complete.transition-enter .input-wrapper.focus:not(.disabled) {
            border-bottom-left-radius: 0;
            border-bottom-right-radius: 0;
            border-bottom-color: transparent;
          }
        </style></div><div class=\\"with-label\\"><label><span>Block Label</span><style>
        label {
          display: block;
          font-weight: normal;
          color: #282d30;
          padding: 0 0 0 1px;
          margin-bottom: 8px;
          font-size: 1rem;
          line-height: 1.5;
        }

        label > :global(*:first-child) {
          margin-top: 0;
        }

        label > :global(*:last-child) {
          margin-bottom: 0;
        }
      </style></label><div class=\\"input-container \\"><div class=\\"input-wrapper line    \\"><input type=\\"text\\" class=\\"\\" placeholder=\\"\\" autocomplete=\\"off\\" value=\\"\\"></div></div><style>
          .with-label {
            display: inline-block;
            width: initial;
            box-sizing: border-box;
            -webkit-box-align: center;
          }

          .input-container {
            display: inline-flex;
            align-items: center;
            width: initial;
            height: calc(2.5 * 16px);
          }

          .input-wrapper {
            display: inline-flex;
            vertical-align: middle;
            align-items: center;
            height: 100%;
            flex: 1;
            user-select: none;
            border-radius: 4px;
            transition: border 0.2s ease 0s, color 0.2s ease 0s;
            background-color: #fff;
            border: 1px solid #ebeced;
          }

          .input-wrapper.left-label {
            border-top-left-radius: 0;
            border-bottom-left-radius: 0;
          }

          .input-wrapper.right-label {
            border-top-right-radius: 0;
            border-bottom-right-radius: 0;
          }

          .input-wrapper.disabled {
            cursor: not-allowed;
          }

          .line.input-wrapper.disabled {
            border-color: #ebeced;
          }

          .solid.input-wrapper.disabled {
            background-color: #dbdde0;
          }

          .focus.input-wrapper:not(.disabled),
          .hover.input-wrapper:not(.disabled) {
            border-color: #0054fe;
            background-color: #fff;
          }

          input {
            margin: 0 1.1429rem;
            padding: 0;
            box-shadow: none;
            font-size: 1rem;
            line-height: calc(2.5 * 16px - 2px);
            background-color: transparent;
            font-weight: normal;
            border: none;
            color: #282d30;
            outline: none;
            border-radius: 0;
            width: 100%;
            min-width: 0;
            -webkit-appearance: none;
          }

          input:disabled {
            cursor: not-allowed;
            color: #aaafbb;
          }

          input.left-icon {
            margin-left: 0;
          }

          input.right-icon {
            margin-right: 0;
          }

          .input-wrapper.focus:not(.disabled) input,
          .input-wrapper.hover:not(.disabled) input {
            color: #0054fe;
          }

          ::placeholder,
          ::-moz-placeholder,
          :-ms-input-placeholder,
          ::-webkit-input-placeholder {
            color: #9b9eac;
          }

          input::-moz-placeholder {
            line-height: calc(2.5 * 16px - 1px);
          }

          input:-webkit-autofill,
          input:-webkit-autofill:active {
            -webkit-box-shadow: 0 0 0 30px #fff inset !important;
            -webkit-text-fill-color: #282d30 !important;
          }

          input:-webkit-autofill:hover,
          input:-webkit-autofill:focus {
            -webkit-box-shadow: 0 0 0 30px #fff inset !important;
            -webkit-text-fill-color: #0054fe !important;
          }

          input:-webkit-autofill,
          input:-webkit-autofill:hover,
          input:-webkit-autofill:focus,
          input:-webkit-autofill:active {
            -webkit-background-clip: text;
          }

          .in-auto-complete .input-wrapper {
            transition: border 0s;
            transition: border-radius 0s;
          }

          .in-auto-complete.transition-leave .input-wrapper.focus:not(.disabled),
          .in-auto-complete.transition-enter .input-wrapper.focus:not(.disabled) {
            border-bottom-left-radius: 0;
            border-bottom-right-radius: 0;
            border-bottom-color: transparent;
          }
        </style></div></div>"
`;

exports[`Input should clear text 1`] = `
"<div class=\\"with-label\\"><div class=\\"input-container \\"><div class=\\"input-wrapper line    \\"><input type=\\"text\\" class=\\"\\" placeholder=\\"\\" autocomplete=\\"off\\" value=\\"\\"><div class=\\"clear-icon \\"><svg width=\\"14\\" height=\\"14\\" viewBox=\\"0 0 14 14\\" xmlns=\\"http://www.w3.org/2000/svg\\"><path d=\\"M7 1.75C4.1125 1.75 1.75 4.1125 1.75 7C1.75 9.8875 4.1125 12.25 7 12.25C9.8875 12.25 12.25 9.8875 12.25 7C12.25 4.1125 9.8875 1.75 7 1.75ZM9.29688 8.37812L8.37812 9.29688L7 7.91875L5.62188 9.29688L4.70312 8.37812L6.08125 7L4.70312 5.62188L5.62188 4.70312L7 6.08125L8.37812 4.70312L9.29688 5.62188L7.91875 7L9.29688 8.37812Z\\" fill=\\"currentColor\\"></path></svg><style>
        .clear-icon {
          padding: 0 8px;
          margin: 0;
          display: inline-flex;
          align-items: center;
          height: 100%;
          cursor: pointer;
          box-sizing: border-box;
          transition: color 150ms ease 0s;
          color: #ebeced;
          visibility: hidden;
          opacity: 0;
        }

        .visible {
          visibility: visible;
          opacity: 1;
        }

        .clear-icon:hover {
          color: #282d30;
        }

        svg {
          color: currentColor;
          width: calc(16px * 2.5 * .46);
          height: calc(16px * 2.5 * .46);
        }
      </style></div></div></div><style>
          .with-label {
            display: inline-block;
            width: initial;
            box-sizing: border-box;
            -webkit-box-align: center;
          }

          .input-container {
            display: inline-flex;
            align-items: center;
            width: initial;
            height: calc(2.5 * 16px);
          }

          .input-wrapper {
            display: inline-flex;
            vertical-align: middle;
            align-items: center;
            height: 100%;
            flex: 1;
            user-select: none;
            border-radius: 4px;
            transition: border 0.2s ease 0s, color 0.2s ease 0s;
            background-color: #fff;
            border: 1px solid #ebeced;
          }

          .input-wrapper.left-label {
            border-top-left-radius: 0;
            border-bottom-left-radius: 0;
          }

          .input-wrapper.right-label {
            border-top-right-radius: 0;
            border-bottom-right-radius: 0;
          }

          .input-wrapper.disabled {
            cursor: not-allowed;
          }

          .line.input-wrapper.disabled {
            border-color: #ebeced;
          }

          .solid.input-wrapper.disabled {
            background-color: #dbdde0;
          }

          .focus.input-wrapper:not(.disabled),
          .hover.input-wrapper:not(.disabled) {
            border-color: #0054fe;
            background-color: #fff;
          }

          input {
            margin: 0 1.1429rem;
            padding: 0;
            box-shadow: none;
            font-size: 1rem;
            line-height: calc(2.5 * 16px - 2px);
            background-color: transparent;
            font-weight: normal;
            border: none;
            color: #282d30;
            outline: none;
            border-radius: 0;
            width: 100%;
            min-width: 0;
            -webkit-appearance: none;
          }

          input:disabled {
            cursor: not-allowed;
            color: #aaafbb;
          }

          input.left-icon {
            margin-left: 0;
          }

          input.right-icon {
            margin-right: 0;
          }

          .input-wrapper.focus:not(.disabled) input,
          .input-wrapper.hover:not(.disabled) input {
            color: #0054fe;
          }

          ::placeholder,
          ::-moz-placeholder,
          :-ms-input-placeholder,
          ::-webkit-input-placeholder {
            color: #9b9eac;
          }

          input::-moz-placeholder {
            line-height: calc(2.5 * 16px - 1px);
          }

          input:-webkit-autofill,
          input:-webkit-autofill:active {
            -webkit-box-shadow: 0 0 0 30px #fff inset !important;
            -webkit-text-fill-color: #282d30 !important;
          }

          input:-webkit-autofill:hover,
          input:-webkit-autofill:focus {
            -webkit-box-shadow: 0 0 0 30px #fff inset !important;
            -webkit-text-fill-color: #0054fe !important;
          }

          input:-webkit-autofill,
          input:-webkit-autofill:hover,
          input:-webkit-autofill:focus,
          input:-webkit-autofill:active {
            -webkit-background-clip: text;
          }

          .in-auto-complete .input-wrapper {
            transition: border 0s;
            transition: border-radius 0s;
          }

          .in-auto-complete.transition-leave .input-wrapper.focus:not(.disabled),
          .in-auto-complete.transition-enter .input-wrapper.focus:not(.disabled) {
            border-bottom-left-radius: 0;
            border-bottom-right-radius: 0;
            border-bottom-color: transparent;
          }
        </style></div>"
`;

exports[`Input should work with different color 1`] = `
"<div><div class=\\"with-label\\"><div class=\\"input-container \\"><div class=\\"input-wrapper line    \\"><input type=\\"text\\" class=\\"\\" placeholder=\\"\\" autocomplete=\\"off\\" value=\\"\\"></div></div><style>
          .with-label {
            display: inline-block;
            width: initial;
            box-sizing: border-box;
            -webkit-box-align: center;
          }

          .input-container {
            display: inline-flex;
            align-items: center;
            width: initial;
            height: calc(2.5 * 16px);
          }

          .input-wrapper {
            display: inline-flex;
            vertical-align: middle;
            align-items: center;
            height: 100%;
            flex: 1;
            user-select: none;
            border-radius: 4px;
            transition: border 0.2s ease 0s, color 0.2s ease 0s;
            background-color: #fff;
            border: 1px solid #ccddff;
          }

          .input-wrapper.left-label {
            border-top-left-radius: 0;
            border-bottom-left-radius: 0;
          }

          .input-wrapper.right-label {
            border-top-right-radius: 0;
            border-bottom-right-radius: 0;
          }

          .input-wrapper.disabled {
            cursor: not-allowed;
          }

          .line.input-wrapper.disabled {
            border-color: #ebeced;
          }

          .solid.input-wrapper.disabled {
            background-color: #dbdde0;
          }

          .focus.input-wrapper:not(.disabled),
          .hover.input-wrapper:not(.disabled) {
            border-color: #0054fe;
            background-color: #fff;
          }

          input {
            margin: 0 1.1429rem;
            padding: 0;
            box-shadow: none;
            font-size: 1rem;
            line-height: calc(2.5 * 16px - 2px);
            background-color: transparent;
            font-weight: normal;
            border: none;
            color: #282d30;
            outline: none;
            border-radius: 0;
            width: 100%;
            min-width: 0;
            -webkit-appearance: none;
          }

          input:disabled {
            cursor: not-allowed;
            color: #aaafbb;
          }

          input.left-icon {
            margin-left: 0;
          }

          input.right-icon {
            margin-right: 0;
          }

          .input-wrapper.focus:not(.disabled) input,
          .input-wrapper.hover:not(.disabled) input {
            color: #0054fe;
          }

          ::placeholder,
          ::-moz-placeholder,
          :-ms-input-placeholder,
          ::-webkit-input-placeholder {
            color: #9b9eac;
          }

          input::-moz-placeholder {
            line-height: calc(2.5 * 16px - 1px);
          }

          input:-webkit-autofill,
          input:-webkit-autofill:active {
            -webkit-box-shadow: 0 0 0 30px #fff inset !important;
            -webkit-text-fill-color: #282d30 !important;
          }

          input:-webkit-autofill:hover,
          input:-webkit-autofill:focus {
            -webkit-box-shadow: 0 0 0 30px #fff inset !important;
            -webkit-text-fill-color: #0054fe !important;
          }

          input:-webkit-autofill,
          input:-webkit-autofill:hover,
          input:-webkit-autofill:focus,
          input:-webkit-autofill:active {
            -webkit-background-clip: text;
          }

          .in-auto-complete .input-wrapper {
            transition: border 0s;
            transition: border-radius 0s;
          }

          .in-auto-complete.transition-leave .input-wrapper.focus:not(.disabled),
          .in-auto-complete.transition-enter .input-wrapper.focus:not(.disabled) {
            border-bottom-left-radius: 0;
            border-bottom-right-radius: 0;
            border-bottom-color: transparent;
          }
        </style></div><div class=\\"with-label\\"><div class=\\"input-container \\"><div class=\\"input-wrapper line    \\"><input type=\\"text\\" class=\\"\\" placeholder=\\"\\" autocomplete=\\"off\\" value=\\"\\"></div></div><style>
          .with-label {
            display: inline-block;
            width: initial;
            box-sizing: border-box;
            -webkit-box-align: center;
          }

          .input-container {
            display: inline-flex;
            align-items: center;
            width: initial;
            height: calc(2.5 * 16px);
          }

          .input-wrapper {
            display: inline-flex;
            vertical-align: middle;
            align-items: center;
            height: 100%;
            flex: 1;
            user-select: none;
            border-radius: 4px;
            transition: border 0.2s ease 0s, color 0.2s ease 0s;
            background-color: #fff;
            border: 1px solid #effaef;
          }

          .input-wrapper.left-label {
            border-top-left-radius: 0;
            border-bottom-left-radius: 0;
          }

          .input-wrapper.right-label {
            border-top-right-radius: 0;
            border-bottom-right-radius: 0;
          }

          .input-wrapper.disabled {
            cursor: not-allowed;
          }

          .line.input-wrapper.disabled {
            border-color: #ebeced;
          }

          .solid.input-wrapper.disabled {
            background-color: #dbdde0;
          }

          .focus.input-wrapper:not(.disabled),
          .hover.input-wrapper:not(.disabled) {
            border-color: #7cd77b;
            background-color: #fff;
          }

          input {
            margin: 0 1.1429rem;
            padding: 0;
            box-shadow: none;
            font-size: 1rem;
            line-height: calc(2.5 * 16px - 2px);
            background-color: transparent;
            font-weight: normal;
            border: none;
            color: #282d30;
            outline: none;
            border-radius: 0;
            width: 100%;
            min-width: 0;
            -webkit-appearance: none;
          }

          input:disabled {
            cursor: not-allowed;
            color: #aaafbb;
          }

          input.left-icon {
            margin-left: 0;
          }

          input.right-icon {
            margin-right: 0;
          }

          .input-wrapper.focus:not(.disabled) input,
          .input-wrapper.hover:not(.disabled) input {
            color: inherit;
          }

          ::placeholder,
          ::-moz-placeholder,
          :-ms-input-placeholder,
          ::-webkit-input-placeholder {
            color: #9b9eac;
          }

          input::-moz-placeholder {
            line-height: calc(2.5 * 16px - 1px);
          }

          input:-webkit-autofill,
          input:-webkit-autofill:active {
            -webkit-box-shadow: 0 0 0 30px #fff inset !important;
            -webkit-text-fill-color: #282d30 !important;
          }

          input:-webkit-autofill:hover,
          input:-webkit-autofill:focus {
            -webkit-box-shadow: 0 0 0 30px #fff inset !important;
            -webkit-text-fill-color: inherit !important;
          }

          input:-webkit-autofill,
          input:-webkit-autofill:hover,
          input:-webkit-autofill:focus,
          input:-webkit-autofill:active {
            -webkit-background-clip: text;
          }

          .in-auto-complete .input-wrapper {
            transition: border 0s;
            transition: border-radius 0s;
          }

          .in-auto-complete.transition-leave .input-wrapper.focus:not(.disabled),
          .in-auto-complete.transition-enter .input-wrapper.focus:not(.disabled) {
            border-bottom-left-radius: 0;
            border-bottom-right-radius: 0;
            border-bottom-color: transparent;
          }
        </style></div><div class=\\"with-label\\"><div class=\\"input-container \\"><div class=\\"input-wrapper line    \\"><input type=\\"text\\" class=\\"\\" placeholder=\\"\\" autocomplete=\\"off\\" value=\\"\\"></div></div><style>
          .with-label {
            display: inline-block;
            width: initial;
            box-sizing: border-box;
            -webkit-box-align: center;
          }

          .input-container {
            display: inline-flex;
            align-items: center;
            width: initial;
            height: calc(2.5 * 16px);
          }

          .input-wrapper {
            display: inline-flex;
            vertical-align: middle;
            align-items: center;
            height: 100%;
            flex: 1;
            user-select: none;
            border-radius: 4px;
            transition: border 0.2s ease 0s, color 0.2s ease 0s;
            background-color: #fff;
            border: 1px solid #fef1ea;
          }

          .input-wrapper.left-label {
            border-top-left-radius: 0;
            border-bottom-left-radius: 0;
          }

          .input-wrapper.right-label {
            border-top-right-radius: 0;
            border-bottom-right-radius: 0;
          }

          .input-wrapper.disabled {
            cursor: not-allowed;
          }

          .line.input-wrapper.disabled {
            border-color: #ebeced;
          }

          .solid.input-wrapper.disabled {
            background-color: #dbdde0;
          }

          .focus.input-wrapper:not(.disabled),
          .hover.input-wrapper:not(.disabled) {
            border-color: #ffc438;
            background-color: #fff;
          }

          input {
            margin: 0 1.1429rem;
            padding: 0;
            box-shadow: none;
            font-size: 1rem;
            line-height: calc(2.5 * 16px - 2px);
            background-color: transparent;
            font-weight: normal;
            border: none;
            color: #282d30;
            outline: none;
            border-radius: 0;
            width: 100%;
            min-width: 0;
            -webkit-appearance: none;
          }

          input:disabled {
            cursor: not-allowed;
            color: #aaafbb;
          }

          input.left-icon {
            margin-left: 0;
          }

          input.right-icon {
            margin-right: 0;
          }

          .input-wrapper.focus:not(.disabled) input,
          .input-wrapper.hover:not(.disabled) input {
            color: inherit;
          }

          ::placeholder,
          ::-moz-placeholder,
          :-ms-input-placeholder,
          ::-webkit-input-placeholder {
            color: #9b9eac;
          }

          input::-moz-placeholder {
            line-height: calc(2.5 * 16px - 1px);
          }

          input:-webkit-autofill,
          input:-webkit-autofill:active {
            -webkit-box-shadow: 0 0 0 30px #fff inset !important;
            -webkit-text-fill-color: #282d30 !important;
          }

          input:-webkit-autofill:hover,
          input:-webkit-autofill:focus {
            -webkit-box-shadow: 0 0 0 30px #fff inset !important;
            -webkit-text-fill-color: inherit !important;
          }

          input:-webkit-autofill,
          input:-webkit-autofill:hover,
          input:-webkit-autofill:focus,
          input:-webkit-autofill:active {
            -webkit-background-clip: text;
          }

          .in-auto-complete .input-wrapper {
            transition: border 0s;
            transition: border-radius 0s;
          }

          .in-auto-complete.transition-leave .input-wrapper.focus:not(.disabled),
          .in-auto-complete.transition-enter .input-wrapper.focus:not(.disabled) {
            border-bottom-left-radius: 0;
            border-bottom-right-radius: 0;
            border-bottom-color: transparent;
          }
        </style></div></div>"
`;

exports[`Input should work with different sizes 1`] = `
"<div><div class=\\"with-label\\"><div class=\\"input-container \\"><div class=\\"input-wrapper line    \\"><input type=\\"text\\" class=\\"\\" placeholder=\\"\\" autocomplete=\\"off\\" value=\\"\\"></div></div><style>
          .with-label {
            display: inline-block;
            width: initial;
            box-sizing: border-box;
            -webkit-box-align: center;
          }

          .input-container {
            display: inline-flex;
            align-items: center;
            width: initial;
            height: calc(1.5 * 16px);
          }

          .input-wrapper {
            display: inline-flex;
            vertical-align: middle;
            align-items: center;
            height: 100%;
            flex: 1;
            user-select: none;
            border-radius: 4px;
            transition: border 0.2s ease 0s, color 0.2s ease 0s;
            background-color: #fff;
            border: 1px solid #ebeced;
          }

          .input-wrapper.left-label {
            border-top-left-radius: 0;
            border-bottom-left-radius: 0;
          }

          .input-wrapper.right-label {
            border-top-right-radius: 0;
            border-bottom-right-radius: 0;
          }

          .input-wrapper.disabled {
            cursor: not-allowed;
          }

          .line.input-wrapper.disabled {
            border-color: #ebeced;
          }

          .solid.input-wrapper.disabled {
            background-color: #dbdde0;
          }

          .focus.input-wrapper:not(.disabled),
          .hover.input-wrapper:not(.disabled) {
            border-color: #0054fe;
            background-color: #fff;
          }

          input {
            margin: 0 1.1429rem;
            padding: 0;
            box-shadow: none;
            font-size: 0.5714rem;
            line-height: calc(1.5 * 16px - 2px);
            background-color: transparent;
            font-weight: normal;
            border: none;
            color: #282d30;
            outline: none;
            border-radius: 0;
            width: 100%;
            min-width: 0;
            -webkit-appearance: none;
          }

          input:disabled {
            cursor: not-allowed;
            color: #aaafbb;
          }

          input.left-icon {
            margin-left: 0;
          }

          input.right-icon {
            margin-right: 0;
          }

          .input-wrapper.focus:not(.disabled) input,
          .input-wrapper.hover:not(.disabled) input {
            color: #0054fe;
          }

          ::placeholder,
          ::-moz-placeholder,
          :-ms-input-placeholder,
          ::-webkit-input-placeholder {
            color: #9b9eac;
          }

          input::-moz-placeholder {
            line-height: calc(1.5 * 16px - 1px);
          }

          input:-webkit-autofill,
          input:-webkit-autofill:active {
            -webkit-box-shadow: 0 0 0 30px #fff inset !important;
            -webkit-text-fill-color: #282d30 !important;
          }

          input:-webkit-autofill:hover,
          input:-webkit-autofill:focus {
            -webkit-box-shadow: 0 0 0 30px #fff inset !important;
            -webkit-text-fill-color: #0054fe !important;
          }

          input:-webkit-autofill,
          input:-webkit-autofill:hover,
          input:-webkit-autofill:focus,
          input:-webkit-autofill:active {
            -webkit-background-clip: text;
          }

          .in-auto-complete .input-wrapper {
            transition: border 0s;
            transition: border-radius 0s;
          }

          .in-auto-complete.transition-leave .input-wrapper.focus:not(.disabled),
          .in-auto-complete.transition-enter .input-wrapper.focus:not(.disabled) {
            border-bottom-left-radius: 0;
            border-bottom-right-radius: 0;
            border-bottom-color: transparent;
          }
        </style></div><div class=\\"with-label\\"><div class=\\"input-container \\"><div class=\\"input-wrapper line    \\"><input type=\\"text\\" class=\\"\\" placeholder=\\"\\" autocomplete=\\"off\\" value=\\"\\"></div></div><style>
          .with-label {
            display: inline-block;
            width: initial;
            box-sizing: border-box;
            -webkit-box-align: center;
          }

          .input-container {
            display: inline-flex;
            align-items: center;
            width: initial;
            height: calc(2 * 16px);
          }

          .input-wrapper {
            display: inline-flex;
            vertical-align: middle;
            align-items: center;
            height: 100%;
            flex: 1;
            user-select: none;
            border-radius: 4px;
            transition: border 0.2s ease 0s, color 0.2s ease 0s;
            background-color: #fff;
            border: 1px solid #ebeced;
          }

          .input-wrapper.left-label {
            border-top-left-radius: 0;
            border-bottom-left-radius: 0;
          }

          .input-wrapper.right-label {
            border-top-right-radius: 0;
            border-bottom-right-radius: 0;
          }

          .input-wrapper.disabled {
            cursor: not-allowed;
          }

          .line.input-wrapper.disabled {
            border-color: #ebeced;
          }

          .solid.input-wrapper.disabled {
            background-color: #dbdde0;
          }

          .focus.input-wrapper:not(.disabled),
          .hover.input-wrapper:not(.disabled) {
            border-color: #0054fe;
            background-color: #fff;
          }

          input {
            margin: 0 1.1429rem;
            padding: 0;
            box-shadow: none;
            font-size: 0.8571rem;
            line-height: calc(2 * 16px - 2px);
            background-color: transparent;
            font-weight: normal;
            border: none;
            color: #282d30;
            outline: none;
            border-radius: 0;
            width: 100%;
            min-width: 0;
            -webkit-appearance: none;
          }

          input:disabled {
            cursor: not-allowed;
            color: #aaafbb;
          }

          input.left-icon {
            margin-left: 0;
          }

          input.right-icon {
            margin-right: 0;
          }

          .input-wrapper.focus:not(.disabled) input,
          .input-wrapper.hover:not(.disabled) input {
            color: #0054fe;
          }

          ::placeholder,
          ::-moz-placeholder,
          :-ms-input-placeholder,
          ::-webkit-input-placeholder {
            color: #9b9eac;
          }

          input::-moz-placeholder {
            line-height: calc(2 * 16px - 1px);
          }

          input:-webkit-autofill,
          input:-webkit-autofill:active {
            -webkit-box-shadow: 0 0 0 30px #fff inset !important;
            -webkit-text-fill-color: #282d30 !important;
          }

          input:-webkit-autofill:hover,
          input:-webkit-autofill:focus {
            -webkit-box-shadow: 0 0 0 30px #fff inset !important;
            -webkit-text-fill-color: #0054fe !important;
          }

          input:-webkit-autofill,
          input:-webkit-autofill:hover,
          input:-webkit-autofill:focus,
          input:-webkit-autofill:active {
            -webkit-background-clip: text;
          }

          .in-auto-complete .input-wrapper {
            transition: border 0s;
            transition: border-radius 0s;
          }

          .in-auto-complete.transition-leave .input-wrapper.focus:not(.disabled),
          .in-auto-complete.transition-enter .input-wrapper.focus:not(.disabled) {
            border-bottom-left-radius: 0;
            border-bottom-right-radius: 0;
            border-bottom-color: transparent;
          }
        </style></div><div class=\\"with-label\\"><div class=\\"input-container \\"><div class=\\"input-wrapper line    \\"><input type=\\"text\\" class=\\"\\" placeholder=\\"\\" autocomplete=\\"off\\" value=\\"\\"></div></div><style>
          .with-label {
            display: inline-block;
            width: initial;
            box-sizing: border-box;
            -webkit-box-align: center;
          }

          .input-container {
            display: inline-flex;
            align-items: center;
            width: initial;
            height: calc(3 * 16px);
          }

          .input-wrapper {
            display: inline-flex;
            vertical-align: middle;
            align-items: center;
            height: 100%;
            flex: 1;
            user-select: none;
            border-radius: 4px;
            transition: border 0.2s ease 0s, color 0.2s ease 0s;
            background-color: #fff;
            border: 1px solid #ebeced;
          }

          .input-wrapper.left-label {
            border-top-left-radius: 0;
            border-bottom-left-radius: 0;
          }

          .input-wrapper.right-label {
            border-top-right-radius: 0;
            border-bottom-right-radius: 0;
          }

          .input-wrapper.disabled {
            cursor: not-allowed;
          }

          .line.input-wrapper.disabled {
            border-color: #ebeced;
          }

          .solid.input-wrapper.disabled {
            background-color: #dbdde0;
          }

          .focus.input-wrapper:not(.disabled),
          .hover.input-wrapper:not(.disabled) {
            border-color: #0054fe;
            background-color: #fff;
          }

          input {
            margin: 0 1.1429rem;
            padding: 0;
            box-shadow: none;
            font-size: 1.1429rem;
            line-height: calc(3 * 16px - 2px);
            background-color: transparent;
            font-weight: normal;
            border: none;
            color: #282d30;
            outline: none;
            border-radius: 0;
            width: 100%;
            min-width: 0;
            -webkit-appearance: none;
          }

          input:disabled {
            cursor: not-allowed;
            color: #aaafbb;
          }

          input.left-icon {
            margin-left: 0;
          }

          input.right-icon {
            margin-right: 0;
          }

          .input-wrapper.focus:not(.disabled) input,
          .input-wrapper.hover:not(.disabled) input {
            color: #0054fe;
          }

          ::placeholder,
          ::-moz-placeholder,
          :-ms-input-placeholder,
          ::-webkit-input-placeholder {
            color: #9b9eac;
          }

          input::-moz-placeholder {
            line-height: calc(3 * 16px - 1px);
          }

          input:-webkit-autofill,
          input:-webkit-autofill:active {
            -webkit-box-shadow: 0 0 0 30px #fff inset !important;
            -webkit-text-fill-color: #282d30 !important;
          }

          input:-webkit-autofill:hover,
          input:-webkit-autofill:focus {
            -webkit-box-shadow: 0 0 0 30px #fff inset !important;
            -webkit-text-fill-color: #0054fe !important;
          }

          input:-webkit-autofill,
          input:-webkit-autofill:hover,
          input:-webkit-autofill:focus,
          input:-webkit-autofill:active {
            -webkit-background-clip: text;
          }

          .in-auto-complete .input-wrapper {
            transition: border 0s;
            transition: border-radius 0s;
          }

          .in-auto-complete.transition-leave .input-wrapper.focus:not(.disabled),
          .in-auto-complete.transition-enter .input-wrapper.focus:not(.disabled) {
            border-bottom-left-radius: 0;
            border-bottom-right-radius: 0;
            border-bottom-color: transparent;
          }
        </style></div><div class=\\"with-label\\"><div class=\\"input-container \\"><div class=\\"input-wrapper line    \\"><input type=\\"text\\" class=\\"\\" placeholder=\\"\\" autocomplete=\\"off\\" value=\\"\\"></div></div><style>
          .with-label {
            display: inline-block;
            width: 50%;
            box-sizing: border-box;
            -webkit-box-align: center;
          }

          .input-container {
            display: inline-flex;
            align-items: center;
            width: 50%;
            height: calc(2.5 * 16px);
          }

          .input-wrapper {
            display: inline-flex;
            vertical-align: middle;
            align-items: center;
            height: 100%;
            flex: 1;
            user-select: none;
            border-radius: 4px;
            transition: border 0.2s ease 0s, color 0.2s ease 0s;
            background-color: #fff;
            border: 1px solid #ebeced;
          }

          .input-wrapper.left-label {
            border-top-left-radius: 0;
            border-bottom-left-radius: 0;
          }

          .input-wrapper.right-label {
            border-top-right-radius: 0;
            border-bottom-right-radius: 0;
          }

          .input-wrapper.disabled {
            cursor: not-allowed;
          }

          .line.input-wrapper.disabled {
            border-color: #ebeced;
          }

          .solid.input-wrapper.disabled {
            background-color: #dbdde0;
          }

          .focus.input-wrapper:not(.disabled),
          .hover.input-wrapper:not(.disabled) {
            border-color: #0054fe;
            background-color: #fff;
          }

          input {
            margin: 0 1.1429rem;
            padding: 0;
            box-shadow: none;
            font-size: 1rem;
            line-height: calc(2.5 * 16px - 2px);
            background-color: transparent;
            font-weight: normal;
            border: none;
            color: #282d30;
            outline: none;
            border-radius: 0;
            width: 100%;
            min-width: 0;
            -webkit-appearance: none;
          }

          input:disabled {
            cursor: not-allowed;
            color: #aaafbb;
          }

          input.left-icon {
            margin-left: 0;
          }

          input.right-icon {
            margin-right: 0;
          }

          .input-wrapper.focus:not(.disabled) input,
          .input-wrapper.hover:not(.disabled) input {
            color: #0054fe;
          }

          ::placeholder,
          ::-moz-placeholder,
          :-ms-input-placeholder,
          ::-webkit-input-placeholder {
            color: #9b9eac;
          }

          input::-moz-placeholder {
            line-height: calc(2.5 * 16px - 1px);
          }

          input:-webkit-autofill,
          input:-webkit-autofill:active {
            -webkit-box-shadow: 0 0 0 30px #fff inset !important;
            -webkit-text-fill-color: #282d30 !important;
          }

          input:-webkit-autofill:hover,
          input:-webkit-autofill:focus {
            -webkit-box-shadow: 0 0 0 30px #fff inset !important;
            -webkit-text-fill-color: #0054fe !important;
          }

          input:-webkit-autofill,
          input:-webkit-autofill:hover,
          input:-webkit-autofill:focus,
          input:-webkit-autofill:active {
            -webkit-background-clip: text;
          }

          .in-auto-complete .input-wrapper {
            transition: border 0s;
            transition: border-radius 0s;
          }

          .in-auto-complete.transition-leave .input-wrapper.focus:not(.disabled),
          .in-auto-complete.transition-enter .input-wrapper.focus:not(.disabled) {
            border-bottom-left-radius: 0;
            border-bottom-right-radius: 0;
            border-bottom-color: transparent;
          }
        </style></div><div class=\\"with-label\\"><div class=\\"input-container \\"><div class=\\"input-wrapper solid    \\"><input type=\\"text\\" class=\\"\\" placeholder=\\"\\" autocomplete=\\"off\\" value=\\"\\"></div></div><style>
          .with-label {
            display: inline-block;
            width: initial;
            box-sizing: border-box;
            -webkit-box-align: center;
          }

          .input-container {
            display: inline-flex;
            align-items: center;
            width: initial;
            height: calc(2.5 * 16px);
          }

          .input-wrapper {
            display: inline-flex;
            vertical-align: middle;
            align-items: center;
            height: 100%;
            flex: 1;
            user-select: none;
            border-radius: 4px;
            transition: border 0.2s ease 0s, color 0.2s ease 0s;
            background-color: #f9fafb;
            border: transparent;
          }

          .input-wrapper.left-label {
            border-top-left-radius: 0;
            border-bottom-left-radius: 0;
          }

          .input-wrapper.right-label {
            border-top-right-radius: 0;
            border-bottom-right-radius: 0;
          }

          .input-wrapper.disabled {
            cursor: not-allowed;
          }

          .line.input-wrapper.disabled {
            border-color: #ebeced;
          }

          .solid.input-wrapper.disabled {
            background-color: #dbdde0;
          }

          .focus.input-wrapper:not(.disabled),
          .hover.input-wrapper:not(.disabled) {
            border-color: transparent;
            background-color: #f0f5ff;
          }

          input {
            margin: 0 1.1429rem;
            padding: 0;
            box-shadow: none;
            font-size: 1rem;
            line-height: calc(2.5 * 16px - 2px);
            background-color: transparent;
            font-weight: normal;
            border: none;
            color: #282d30;
            outline: none;
            border-radius: 0;
            width: 100%;
            min-width: 0;
            -webkit-appearance: none;
          }

          input:disabled {
            cursor: not-allowed;
            color: #aaafbb;
          }

          input.left-icon {
            margin-left: 0;
          }

          input.right-icon {
            margin-right: 0;
          }

          .input-wrapper.focus:not(.disabled) input,
          .input-wrapper.hover:not(.disabled) input {
            color: inherit;
          }

          ::placeholder,
          ::-moz-placeholder,
          :-ms-input-placeholder,
          ::-webkit-input-placeholder {
            color: #9b9eac;
          }

          input::-moz-placeholder {
            line-height: calc(2.5 * 16px - 1px);
          }

          input:-webkit-autofill,
          input:-webkit-autofill:active {
            -webkit-box-shadow: 0 0 0 30px #f9fafb inset !important;
            -webkit-text-fill-color: #282d30 !important;
          }

          input:-webkit-autofill:hover,
          input:-webkit-autofill:focus {
            -webkit-box-shadow: 0 0 0 30px #f0f5ff inset !important;
            -webkit-text-fill-color: inherit !important;
          }

          input:-webkit-autofill,
          input:-webkit-autofill:hover,
          input:-webkit-autofill:focus,
          input:-webkit-autofill:active {
            -webkit-background-clip: text;
          }

          .in-auto-complete .input-wrapper {
            transition: border 0s;
            transition: border-radius 0s;
          }

          .in-auto-complete.transition-leave .input-wrapper.focus:not(.disabled),
          .in-auto-complete.transition-enter .input-wrapper.focus:not(.disabled) {
            border-bottom-left-radius: 0;
            border-bottom-right-radius: 0;
            border-bottom-color: transparent;
          }
        </style></div></div>"
`;
